# stm32h7-flash-example

./: README.md
blinky/: Cargo.toml  memory.x
blinky/.cargo/: config.toml
blinky/src/: main.rs
bootloader/: Cargo.toml  README.md  build.rs
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
flash-algo/: Cargo.toml  README.md  build.rs  template.yaml
flash-algo/.cargo/: config.toml
flash-algo/src/: main.rs
flash-lib/: Cargo.toml
flash-lib/src/: lib.rs
