[package]
name = "flash-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = ["stm32h7s3l8", "time-driver-tim2", "exti", "unstable-pac", "chrono"] }
assign-resources = "0.5.0"

# Dependencies below here are for the flash-test binary only
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"], optional = true}
defmt = { version = "0.3.10", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
panic-probe = { version = "0.3.2", optional = true, features = ["print-defmt"] }
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"], optional = true}
cortex-m-rt = { version = "0.7.5", optional = true }
embassy-time = { version = "0.4.0", features = ["tick-hz-1_000_000"], optional = true }

[features]
flash-test = ["embassy-stm32/memory-x", "defmt", "defmt-rtt", "panic-probe", "embassy-executor", "cortex-m", "cortex-m-rt", "embassy-time"]

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "e145a653cf9d31f101b0735406b8b7c9208bc1da"}
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "e145a653cf9d31f101b0735406b8b7c9208bc1da"}
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "e145a653cf9d31f101b0735406b8b7c9208bc1da"}

[[bin]]
name = "flash-test"
path = "src/bin/flash_test.rs"
required-features = ["flash-test"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-
